src/snapshots/snapshots/oxide_rs__snapshots__snap__tests__app_renders_home_screen.snap
---
source: src/snapshots/snap.rs
expression: output
---
~
~
~
~
~
~
~
~
~
~
~
~
~
~                                  Oxide Editor -- Version 0.1.0
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
~
