src/snapshots/snapshots/oxide_rs__snapshots__snap__tests__app_renders_super_narrow.snap
---
source: src/snapshots/snap.rs
expression: output
---
us
us

us

co

pu
  
  
  

  
  
  
  
  
  
  
  
  
  
  
  
  
  
  

  
  
  
  

  
}

pu
  
  
  
1:
